--- a/frontend/src/styles/Pantry.css
+++ b/frontend/src/styles/Pantry.css
@@ -1,7 +1,7 @@
 .page-wrapper {
   max-width: 400px;
   margin: 2rem auto;
-  background: lightgreen;
+  background: whitesmoke;
   padding: 1.5rem;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
