--- a/frontend/src/styles/Pantry.css
+++ b/frontend/src/styles/Pantry.css
@@ -15,6 +15,13 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.header-nav {
+  display: flex;
+  justify-content: space-between; /* Pushes the logo to the left, and the nav to the right */
+  align-items: center;            /* Vertically centers items within the header */
+  padding: 10px;
+}
+
 input[type="text"] {
   width: 95%;
   padding: 1rem;
@@ -25,9 +32,7 @@ input[type="text"] {
 }
 
 .chefbook-logo {
-  display: block;
-  width: 120px;
-  justify-content: left;
+  width: 9rem;
   margin: 0 auto 0.5rem;
 }
 
@@ -40,7 +45,7 @@ input[type="text"] {
 .pantry-panel {
   flex: 1;
   float: left;
-  width: 35%;
+  width: 30%;
   min-width: 280px;
   border-right: 1px solid #ddd;
   padding-right: 1rem;
@@ -48,7 +53,7 @@ input[type="text"] {
 
 .recipes-panel {
   float: right;
-  width: 58%;
+  width: 65%;
 }
 
 .recipe-grid {
@@ -59,6 +64,8 @@ input[type="text"] {
 
 .recipe-card {
   background: white;
+  width: 350px;
+  height: 300px;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
   overflow: hidden;
@@ -66,7 +73,7 @@ input[type="text"] {
 
 .recipe-card img {
   width: 100%;
-  height: 140px;
+  height: 180px;
   object-fit: cover;
 }
 
